mercredi deuxieme push